# pypref

./: .gitignore  Preferences.py  README.md  __init__.py  __pkginfo__.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
_sources/: index.txt
docs/source/: conf.py  index.rst
tests/: fixtures.py  test_loadpref.py  test_string.py
